<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_home"
        android:enabled="true"
        android:icon="@drawable/menu_home"
        android:title="@string/bottomHome"
        app:showAsAction="always"/>

    <item
        android:id="@+id/bottom_summary"
        android:enabled="true"
        android:icon="@drawable/menu_chart"
        android:title="@string/bottomSummary"
        app:showAsAction="always"/>

    <item
        android:id="@+id/bottom_arr"
        android:enabled="true"
        android:icon="@drawable/menu_arr"
        android:title="@string/bottomArr"
        app:showAsAction="always"/>

    <item
        android:id="@+id/bottom_profile"
        android:enabled="true"
        android:icon="@drawable/menu_profile"
        android:title="@string/bottomProfile"
        app:showAsAction="always"/>

</menu>