<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.Activity_Login">

    <include
        layout="@layout/toolbar"/>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"
            >

            <!--로그인 라벨-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginLabel"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textAlignment="viewStart"
                />
            <!--로그인 도움말-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/loginText"
                android:textAlignment="viewStart"
                android:textColor="#A9A9A9"
                android:textSize="14dp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
            <!--이메일 라벨-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_Label"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="12dp"
                android:textAlignment="viewStart"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                />
            <!--이메일 입력창-->
            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/login_edittext_normal"
                android:ems="10"
                android:textSize="16dp"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:autofillHints="emailAddress"
                tools:ignore="VisualLintTextFieldSize" />
            <!--비밀번호 라벨-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_Label"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="12dp"
                android:textAlignment="viewStart"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                />
            <!--비밀번호 입력창-->
            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/login_edittext_normal"
                android:ems="10"
                android:textSize="16dp"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:autofillHints="emailAddress"
                tools:ignore="VisualLintTextFieldSize" />

            <!--핸드폰 라벨-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardian_Label"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="12dp"
                android:textAlignment="viewStart"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                />
            <!--핸드폰 입력창-->
            <EditText
                android:id="@+id/guardian_EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/login_edittext_normal"
                android:ems="10"
                android:textSize="16dp"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:autofillHints="emailAddress"
                tools:ignore="VisualLintTextFieldSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- 자동 로그인 버튼-->

                <ImageButton
                    android:id="@+id/autoLoginImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/login_autologin"
                    android:contentDescription="TODO"
                    tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck"

                    android:onClick="autoLoginClickEvent"/>

                <Button
                    android:id="@+id/autoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:outlineProvider="none"
                    android:text="@string/autoLogin"
                    android:textSize="12dp"
                    android:textColor="#555555"
                    android:textStyle="bold"

                    android:onClick="autoLoginClickEvent"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <!-- 아이디/비밀번호 찾기 버튼 -->
                <Button
                    android:id="@+id/findEmailPw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"

                    android:backgroundTint="@color/white"
                    android:outlineProvider="none"

                    android:text="@string/findEmailPassword"
                    android:textColor="#A9A9A9"
                    android:textSize="12dp"
                    android:textStyle="bold"

                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <!-- 로그인 버튼 -->
            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/login_loginbutton"
                android:outlineProvider="none"

                android:text="@string/loginLabel"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold"

                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"

                tools:ignore="TextContrastCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="100dp"/>
        </LinearLayout>
    </ScrollView>
    <!--Toolbar-->
</androidx.constraintlayout.widget.ConstraintLayout>