<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/profile_top"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="35dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/sir"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/profile_logout"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/profile_logout_btn"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/logout"
                        android:background="#00ff0000"
                        android:textColor="@color/LightGrey"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/email_Label"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/joinDate"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/profile_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="7"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="15dp" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/profile_information"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="#00ff0000"
                android:enabled="true"
                android:text="@string/basic"
                android:textColor="@color/LightGrey"
                android:textSize="18dp"
                android:textStyle="bold" />

            <!--            <Button-->
<!--                android:id="@+id/profile_ecg"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="ECG"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="18dp"-->
<!--                android:background="#00ff0000"-->
<!--                android:textColor="@color/LightGrey"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="18"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>


        <FrameLayout
            android:id="@+id/inner_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </FrameLayout>
    </LinearLayout>
</LinearLayout>
